--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.s-btn{
+	background-color:black;
+	color:white;
+	border-radius:5px;
+}
+.s-btn:hover{
+	background-color:yellow;
+	color:black;
+	border-radius:30px;
+}
